apps/prowlarr/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata: {name: prowlarr, namespace: media}
spec:
  parentRefs:
    - {name: home, namespace: traefik}
  hostnames: [prowlarr.reza.network]
  rules:
    - backendRefs:
        - {name: prowlarr-access, port: 80}
